# llm-tools-mcp

./: README.md  example-mcp.json  llm_mcp.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_mcp.py
